# ws-com-framework

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Cargo.toml  build.rs  license  readme.md  test.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: precommit.yml  rustfmt.yml  tarpaulin.yml  test.yml
macros/: Cargo.toml
macros/src/: lib.rs
src/: client.rs  error.rs  lib.rs  message.proto  message.rs  server.rs  traits.rs  websocket_message.rs
src/client/: mod.rs
src/server/: error.rs  message.rs  mod.rs  traits.rs
src/traits/: mod.rs  tokio.rs  tokio_tungstenite.rs  warp.rs  websocket.rs
tests/: test_bad_conversion.rs  test_conversion.rs
