[package]
name = "ws-com-framework"
version = "1.1.0"
authors = ["Josiah Bull <josiah.bull7@gmail.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
prost = "0.10"
async-trait = "0.1.51"

[build-dependencies]
prost-build = "0.10.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }