[package]
name = "ws-com-framework"
version = "1.1.0"
authors = ["Josiah Bull <josiah.bull7@gmail.com>"]
license = "MIT"
description = "Enforces consistent conversion of types to/from binary when communicating through websockets."
edition = "2021"
build = "build.rs"

[dependencies]
prost = "0.11"
async-trait = "0.1.57"

[build-dependencies]
prost-build = "0.11.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
